Build docker with createrepo